@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.39 2024/5/12
+  <ul>
+    <li>IPAとAPKの自動ビルドを修正</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.38 2024/5/12
   <ul>
     <li>Android APKビルドの修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.37 2024/5/12
   <ul>
     <li>ソローさんが日本語ノベルと英語ノベルのテンプレートを刷新</li>
@@ -433,12 +438,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.39 2024/5/12
+  <ul>
+    <li>Fixed the IPA and APK automatic build</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.38 2024/5/12
   <ul>
     <li>Fixed the Android apk build</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.37 2024/5/12
   <ul>
     <li>SOrow renewed the Japanese and English novel style template</li>
